Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7333

"'show table status like 'table_name'" on tokudb table lead to MariaDB crash

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL)
    • 5.5.42, 10.0.16
    • None

    Description

      "show table status like 'table_name'" on tokudb table lead to MariaDB crash, i could not get tokudb table DDL information, but insert/update/delete/select on that tokudb table work well.

      MariaDB error log

      141205 10:54:31 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see http://kb.askmonty.org/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.0.15-MariaDB-log
      key_buffer_size=268435456
      read_buffer_size=8388608
      max_used_connections=2
      max_threads=1001
      thread_count=2
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 41283820 K bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0x7f6c667ec008
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f6ed5cbfc48 thread_stack 0x30000
      /usr/sbin/mysqld(my_print_stacktrace+0x2b)[0xb70d4b]
      /usr/sbin/mysqld(handle_fatal_signal+0x398)[0x7257b8]
      /lib64/libpthread.so.0(+0xf710)[0x7f6ed59d3710]
      /lib64/libc.so.6(+0x13386f)[0x7f6ed413586f]
      /usr/sbin/mysqld(_ZN6String6appendEPKc+0x2a)[0x643d5a]
      /usr/sbin/mysqld(_Z17show_create_tableP3THDP10TABLE_LISTP6StringP14HA_CREATE_INFO17enum_with_db_name+0x1596)[0x631496]
      /usr/sbin/mysqld(_Z18mysqld_show_createP3THDP10TABLE_LIST+0x2e2)[0x639102]
      /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x3f5d)[0x5d511d]
      /usr/sbin/mysqld[0x5d79d2]
      /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcj+0x1b20)[0x5d9b90]
      /usr/sbin/mysqld(_Z26threadpool_process_requestP3THD+0xa7)[0x6cb127]
      /usr/sbin/mysqld[0x6fac2d]
      /usr/sbin/mysqld[0xa66a8d]
      /lib64/libpthread.so.0(+0x79d1)[0x7f6ed59cb9d1]
      /lib64/libc.so.6(clone+0x6d)[0x7f6ed40eab6d]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7f6c1b02f020): is an invalid pointer
      Connection ID (thread ID): 5
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on
       
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.
      141205 10:54:31 mysqld_safe Number of processes running now: 0
      141205 10:54:31 mysqld_safe mysqld restarted

      https://github.com/Tokutek/tokudb-engine/issues/274

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              robinzhao robinzhao
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.