MDEV-7333 "'show table status like 'table_name'" on tokudb table lead to MariaDB crash

adjust enum values when reading them from frm